Update rosechat placeholder and color tokenizers, disable all others